--- a/ChinaGuide.html
+++ b/ChinaGuide.html
@@ -213,9 +213,9 @@
 </p>
 	
 <!-- 
-		Section of unordered lists about average amount of money 
-		spent by tourists in respective cities and  budget ranges 
-	-->
+	Section of unordered lists about average amount of money 
+	spent by tourists in respective cities and  budget ranges 
+-->
 <p><strong>Average Amount of Money Spent By Tourists</strong></p>
 <p>Beijing</p>
 <ul>
@@ -244,22 +244,26 @@
 <div class = "row">
 
 	<!-- Div that formats attraction image in center of page -->
-	<div class = "1column">
+	<div class = "column">
+		
+		<!-- Displays image of attraction -->
 		<img src = "Images/China/GreatWall.jpg" alt = "Great Wall of China">
+		
+		<!-- Displays google map location of attraction -->
 		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3036.958957464021!2d116.57037489999999!3d40.431907700000004!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x35f121d7687f2ccf%3A0xd040259b950522df!2sGreat%20Wall%20of%20China!5e0!3m2!1sen!2sus!4v1682343392876!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 		<h4>Great Wall of China</h4>
 		<p>The Great Wall of China is a series of connected fortifications and served as protection of Imperial China 
 			from nomadic groups from the Eurasian Steppes.
 		</p>
 	</div>
-	<div class = "1column">
+	<div class = "column">
 		<img src = "Images/China/PalaceMuseum.jpg" alt = "The Palace Museum">
 		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3060.119373664412!2d116.3971546!3d39.916344699999996!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x35f052dd9bcd81ab%3A0xde43eaed9b106064!2sThe%20Palace%20Museum!5e0!3m2!1sen!2sus!4v1682343442137!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 		<h4>The Palace Museum</h4>
 		<p>This museum houses about 700,000 pieces of Chinese artwork and artifacts.
 		</p>
 	</div>
-	<div class = "1column">
+	<div class = "column">
 		<img src = "Images/China/SummerPalace.jpg" alt = "Summer Palace">
 		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3056.378945619442!2d116.27546059999999!3d39.9999823!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3402f8c7b9c38f3f%3A0x45d9b1774c04a132!2sSummer%20Palace!5e0!3m2!1sen!2sus!4v1682343475901!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 		<h4>Summer Palace</h4>
@@ -267,7 +271,7 @@
 			and was rebuilt to be a public park.
 		</p>
 	</div>
-	<div class = "1column">
+	<div class = "column">
 		<img src = "Images/China/TempleOfHeaven.jpg" alt = "Temple of Heaven">
 		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3061.6453934114306!2d116.40660560000002!3d39.8821803!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x35f04d6019ff91eb%3A0x372c15453b110e6a!2sTemple%20of%20Heaven!5e0!3m2!1sen!2sus!4v1682343541980!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 		<h4>Temple of Heaven</h4>
@@ -279,21 +283,21 @@
 <h3>Places to Visit in Shanghai</h3>
 <br>
 <div class = "row">
-	<div class = "1column">
+	<div class = "column">
 		<img src = "Images/China/YuGarden.jpg" alt = "Yu Garden">
 		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3063.598219536182!2d116.25952900000001!3d39.838425!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x35f048c8ae402883%3A0x959c36ba7e579fed!2sYu%20Garden!5e0!3m2!1sen!2sus!4v1682343587153!5m2!1sen!2sus"  style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 		<h4>Yu Garden</h4>
 		<p>This garden was first built during the Ming dynasty and is surrounded by the city god temple and Yuyuan Bazaar.
 		</p>
 	</div>
-	<div class = "1column">
+	<div class = "column">
 		<img src = "Images/China/ShanghaiMuseum.jpg" alt = "Shanghai Museum">
 		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3411.725603773977!2d121.47552780000001!3d31.228330699999994!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x35b270696d12653d%3A0x4d4c4e7bc3c8db6c!2sShanghai%20Museum!5e0!3m2!1sen!2sus!4v1682343621811!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 		<h4>Shanghai Museum</h4>
 		<p>This museum is considered China's first world-class modern museum and contains rare cultural pieces. 
 		</p>
 	</div>
-	<div class = "1column">
+	<div class = "column">
 		<img src = "Images/China/PearlTVTower.jpg" alt = "Oriental Pearl TV Tower">
 		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3411.315477323491!2d121.49975529999999!3d31.239688899999997!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x35b270fb25b0d4db%3A0x163e9f3be2e08565!2sOriental%20Pearl%20TV%20Tower!5e0!3m2!1sen!2sus!4v1682343655646!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 		<h4>Oriental Pearl TV Tower</h4>
@@ -305,21 +309,21 @@
 <h3>Places to Visit in Hong Kong</h3>
 <br>
 <div class = "row">
-	<div class = "1column">
+	<div class = "column">
 		<img src = "Images/China/NanLianGarden.jpg" alt = "Nan Lian Garden">
 		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3690.3711264260164!2d114.2045149!3d22.339611399999995!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x340406c51bbb8503%3A0xef6bb4cc5b0b6ccf!2sNan%20Lian%20Garden!5e0!3m2!1sen!2sus!4v1682343699158!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 		<h4>Nan Lian Garden</h4>
 		<p>This Tang dynasty style garden was a joint project between Chi Lin Nunnery and the Hong Kong government built in 2006.
 		</p>
 	</div>
-	<div class = "1column">
+	<div class = "column">
 		<img src = "Images/China/HongKongDisney.jpg" alt = "Hong Kong Disneyland">
 		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d14764.30386284286!2d114.03252716977538!3d22.31296660000001!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3403fc2f53d3953d%3A0x35b3af6ce4475405!2sHong%20Kong%20Disneyland!5e0!3m2!1sen!2sus!4v1682343728721!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 		<h4>Hong Kong Disneyland</h4>
 		<p>This is the largest theme park in Hong Kong.
 		</p>
 	</div>
-	<div class = "1column">
+	<div class = "column">
 		<img src = "Images/China/TianTanBuddha.jpg" alt = "Tian Tan Buddha">
 		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3692.6333841474893!2d113.904984!3d22.2539847!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x340158f66af64e31%3A0x4d0fe4264be5f070!2sTian%20Tan%20Buddha!5e0!3m2!1sen!2sus!4v1682343752397!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 		<h4>Tian Tan Buddha</h4>
