--- a/BrazilGuide.html
+++ b/BrazilGuide.html
@@ -243,7 +243,9 @@
 <div class = "row">
 
 	<!-- Div that formats attraction image in center of page -->
-	<div class = "1column">
+	<div class = "column">
+		
+		<!-- Displays image of attraction -->
 		<img src = "Images/Brazil/ChristTheRedeemerImage.png" alt = "Christ the Redeemer">
 
 		<!-- Displays google map location of attraction -->
@@ -253,7 +255,7 @@
 		long with its arms stretched.
 		</p>
 	</div>
-	<div class = "1column">
+	<div class = "column">
 		<img src = "Images/Brazil/CopacabanaImage.png" alt = "Copacabana">
 		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d29386.99197251993!2d-43.18575529999998!3d-22.973270799999984!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9bd523d20f9c53%3A0x693c6132635e6b0d!2sCopacabana%2C%20Rio%20de%20Janeiro%20-%20State%20of%20Rio%20de%20Janeiro%2C%20Brazil!5e0!3m2!1sen!2sus!4v1682342734604!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 		<h4>Copacabana</h4>
@@ -261,7 +263,7 @@
 		famous beaches in the world.
 		</p>
 	</div>
-	<div class = "1column">
+	<div class = "column">
 		<img src = "Images/Brazil/RioCarnival2023Image.png" alt = "Rio Carnival 2023">
 		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3673.459017366101!2d-43.18739679999997!3d-22.97014239999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9bd54090bfd0a3%3A0xf2e8a97fde1fd02d!2sRIO-CARNIVAL!5e0!3m2!1sen!2sus!4v1682342929195!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 		<h4>Rio Carnival 2023</h4>
@@ -273,21 +275,21 @@
 <h3>Places to Visit in São Paulo</h3>
 <br>
 <div class = "row">
-	<div class = "1column">
+	<div class = "column">
 		<img src = "Images/Brazil/SaoPauloMuseumOfArt.jpg" alt = "São Paulo Museum of Art">
 		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3657.195696784533!2d-46.6558819!3d-23.561414!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce59ceb1eb771f%3A0xe904f6a669744da1!2sMuseum%20of%20Art%20of%20S%C3%A3o%20Paulo%20Assis%20Chateaubriand!5e0!3m2!1sen!2sus!4v1682342979681!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 		<h4>São Paulo Museum of Art</h4>
 		<p>This art museum contains modern art from all over Latin America, Africa, Asia, and Europe.
 		</p>
 	</div>
-	<div class = "1column">
+	<div class = "column">
 		<img src = "Images/Brazil/MuseuDoFutebol.jpg" alt = "Museu do Futebol">
 		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3657.577550783277!2d-46.665136399999994!3d-23.547691999999994!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce5825daacb07f%3A0xcfdec9e87c999ece!2sMuseu%20do%20Futebol!5e0!3m2!1sen!2sus!4v1682343013341!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 		<h4>Museu do Futebol</h4>
 		<p>The Football (soccer) Museum is dedicated to the practice and history of football in Brazil and around the world.
 		</p>
 	</div>
-	<div class = "1column">
+	<div class = "column">
 		<img src = "Images/Brazil/IbirapueraPark.jpg" alt = "Ibirapuera Park">
 		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3656.4715356663773!2d-46.65763359999996!3d-23.58741619999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce59f1069d11d1%3A0xcb936109af9ce541!2sIbirapuera%20Park!5e0!3m2!1sen!2sus!4v1682343066115!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 		<h4>Ibirapuera Park</h4>
@@ -299,7 +301,7 @@
 <h3>Places to Visit in Manaus</h3>
 <br>
 <div class = "row">
-	<div class = "1column">
+	<div class = "column">
 		<img src = "Images/Brazil/AnavilhanasNationalPark.jpg" alt = "Anavilhanas National Park">
 		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3982.7258680210425!2d-65.8560664!3d-3.4168320999999993!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x921c000000008467%3A0x5210a1dfd753ea34!2sAnavilhanas%20National%20Park!5e0!3m2!1sen!2sus!4v1682343103341!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 		<h4>Anavilhanas National Park</h4>
