--- a/CanadaGuide.html
+++ b/CanadaGuide.html
@@ -244,7 +244,9 @@
 <div class = "row">
 
 	<!-- Div that formats attraction image in center of page -->
-	<div class = "1column">
+	<div class = "column">
+		
+		<!-- Displays image of attraction -->
 		<img src = "Images/Canada/CaveBasinSite.jpg" alt = "Cave Basin Site">
 
 		<!-- Displays google map location of attraction -->
@@ -253,7 +255,7 @@
 		<p>This site is located in the Canadian Rocky Mountains at the thermal mineral springs.
 		</p>
 	</div>
-	<div class = "1column">
+	<div class = "column">
 		<img src = "Images/Canada/LakeMinnewanka.jpg" alt = "Lake Minnewanka">
 		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d159806.36700950752!2d-115.37545909999996!3d51.25637915000002!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x5370d2948efafecd%3A0x648548874b447ec6!2sLake%20Minnewanka!5e0!3m2!1sen!2sus!4v1682343208627!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 		<h4>Lake Minnewanka</h4>
@@ -266,7 +268,7 @@
 <h3>Places to Visit in Montreal</h3>
 <br>
 <div class = "row">
-	<div class = "1column">
+	<div class = "column">
 		<img src = "Images/Canada/NotreDameBasilica.jpg" alt = "Notre-Dame Basilica">
 		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2796.2758494499653!2d-73.5561204!3d45.5045254!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4cc91a575897713d%3A0x1ffcef9f1d0d96aa!2sNotre-Dame%20Basilica%20of%20Montreal!5e0!3m2!1sen!2sus!4v1682343241840!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 		<h4>Notre-Dame Basilica of Montreal</h4>
@@ -285,14 +287,14 @@
 <h3>Places to Visit in Vancouver</h3>
 <br>
 <div class = "row">
-	<div class = "1column">
+	<div class = "column">
 		<img src = "Images/Canada/VancouverAquarium.jpg" alt = "Vancouver Aquarium">
 		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2601.728416289491!2d-123.1308774!3d49.300487600000004!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x5486718d7aca6ca7%3A0x5f251627980ee358!2sVancouver%20Aquarium!5e0!3m2!1sen!2sus!4v1682343303863!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 		<h4>Vancouver Aquarium</h4>
 		<p>The Vancouver Aquarium was the first public aquarium to open in Canada.
 		</p>
 	</div>
-	<div class = "1column">
+	<div class = "column">
 		<img src = "Images/Canada/CapilanoBridge.jpeg" alt = "Capilano Bridge">
 		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2599.490673388458!2d-123.11492439999999!3d49.3428609!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x54866fd200dcde49%3A0xf350b3ec85130f5e!2sCapilano%20Suspension%20Bridge%20Park!5e0!3m2!1sen!2sus!4v1682343346038!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 		<h4>Capilano Suspension Bridge Park</h4>
