--- a/JamaicaGuide.html
+++ b/JamaicaGuide.html
@@ -204,7 +204,7 @@
 <div class = "CountryList">
 
 <!-- Paragraph contains facts of above mentioned country -->
-<h1>Some Facts about Country</h1>
+<h1>Some Facts about Jamaica</h1>
 <p>Jamaica is and island country located in the Caribbean Sea, south of Cuba.
 	It has a population of approximately 2.7 million people (as of 2023) and its 
 	capital is Kingston. The official language is English, with its currency being 
