--- a/BrazilGuide.html
+++ b/BrazilGuide.html
@@ -41,7 +41,8 @@
 					'<li><a href = "JamaicaGuide.html">Jamaica</a></li>',
 					'<li><a href = "MexicoGuide.html">Mexico</a></li>',
 					'<li><a href = "BrazilGuide.html">Brazil</a></li>',
-					'<li><a href = "PeruGuide.html">Peru</a></li>'
+					'<li><a href = "PeruGuide.html">Peru</a></li>',
+					'<li><a href = "TurkeyGuide.html">Turkey</a></li>'
 				].join('');
 				
 				// Sorts country web page list in order of most to least expensive to visit
@@ -75,7 +76,8 @@
 					'<li><a href = "TurkeyGuide.html">Turkey</a></li>',
 					'<li><a href = "SpainGuide.html">Spain</a></li>',
 					'<li><a href = "SriLankaGuide.html">Sri Lanka</a></li>',
-					'<li><a href = "EgyptGuide.html">Egypt</a></li>'
+					'<li><a href = "EgyptGuide.html">Egypt</a></li>',
+					'<li><a href = "TurkeyGuide.html">Turkey</a></li>'
 				].join('');
 				
 				// Sorts country web page list in order of most to least popular
@@ -109,7 +111,8 @@
 					'<li><a href = "JamaicaGuide.html">Jamaica</a></li>',
 					'<li><a href = "PeruGuide.html">Peru</a></li>',
 					'<li><a href = "NewZealandGuide.html">New Zealand</a></li>',
-					'<li><a href = "SriLankaGuide.html">Sri Lanka</a></li>'
+					'<li><a href = "SriLankaGuide.html">Sri Lanka</a></li>',
+					'<li><a href = "TurkeyGuide.html">Turkey</a></li>'
 				].join('');
 				var element = document.getElementById("sorting");
 				var val = element.options[element.selectedIndex].value;
@@ -178,6 +181,7 @@
 		<li><a href = "SwitzerlandGuide.html">Switzerland</a></li>
 		<li><a href = "SwedenGuide.html">Sweden</a></li>
 		<li><a href = "ThailandGuide.html">Thailand</a></li>
+		<li><a href = "TurkeyGuide.html">Turkey</a></li>
 		<li><a href = "TurkeyGuide.html">Turkey</a></li>
 	</ul>
 
