--- a/CountryGuide.html
+++ b/CountryGuide.html
@@ -37,7 +37,8 @@
 					'<li><a href = "JamaicaGuide.html">Jamaica</a></li>',
 					'<li><a href = "MexicoGuide.html">Mexico</a></li>',
 					'<li><a href = "BrazilGuide.html">Brazil</a></li>',
-					'<li><a href = "PeruGuide.html">Peru</a></li>'
+					'<li><a href = "PeruGuide.html">Peru</a></li>',
+					'<li><a href = "TurkeyGuide.html">Turkey</a></li>'
 				].join('');
 				var price = [
 					'<li><a href = "AustraliaGuide.html">Australia</a></li>',
@@ -69,7 +70,8 @@
 					'<li><a href = "TurkeyGuide.html">Turkey</a></li>',
 					'<li><a href = "SpainGuide.html">Spain</a></li>',
 					'<li><a href = "SriLankaGuide.html">Sri Lanka</a></li>',
-					'<li><a href = "EgyptGuide.html">Egypt</a></li>'
+					'<li><a href = "EgyptGuide.html">Egypt</a></li>',
+					'<li><a href = "TurkeyGuide.html">Turkey</a></li>'
 				].join('');
 				var popularity = [
 					'<li><a href = "FranceGuide.html">France</a></li>',
@@ -101,7 +103,8 @@
 					'<li><a href = "JamaicaGuide.html">Jamaica</a></li>',
 					'<li><a href = "PeruGuide.html">Peru</a></li>',
 					'<li><a href = "NewZealandGuide.html">New Zealand</a></li>',
-					'<li><a href = "SriLankaGuide.html">Sri Lanka</a></li>'
+					'<li><a href = "SriLankaGuide.html">Sri Lanka</a></li>',
+					'<li><a href = "TurkeyGuide.html">Turkey</a></li>'
 				].join('');
 				var element = document.getElementById("sorting");
 				var val = element.options[element.selectedIndex].value;
@@ -165,6 +168,7 @@
 		<li><a href = "SwitzerlandGuide.html">Switzerland</a></li>
 		<li><a href = "SwedenGuide.html">Sweden</a></li>
 		<li><a href = "ThailandGuide.html">Thailand</a></li>
+		<li><a href = "TurkeyGuide.html">Turkey</a></li>
 		<li><a href = "TurkeyGuide.html">Turkey</a></li>
 	</ul>
 	<div class="topnav">
