--- a/TravelGuide.html
+++ b/TravelGuide.html
@@ -40,7 +40,8 @@
 					'<li><a href = "JamaicaGuide.html">Jamaica</a></li>',
 					'<li><a href = "MexicoGuide.html">Mexico</a></li>',
 					'<li><a href = "BrazilGuide.html">Brazil</a></li>',
-					'<li><a href = "PeruGuide.html">Peru</a></li>'
+					'<li><a href = "PeruGuide.html">Peru</a></li>',
+					'<li><a href = "TurkeyGuide.html">Turkey</a></li>'
 				].join('');
 
 				// Sorts country web page list in order of most to least expensive to visit
@@ -74,7 +75,8 @@
 					'<li><a href = "TurkeyGuide.html">Turkey</a></li>',
 					'<li><a href = "SpainGuide.html">Spain</a></li>',
 					'<li><a href = "SriLankaGuide.html">Sri Lanka</a></li>',
-					'<li><a href = "EgyptGuide.html">Egypt</a></li>'
+					'<li><a href = "EgyptGuide.html">Egypt</a></li>',
+					'<li><a href = "TurkeyGuide.html">Turkey</a></li>'
 				].join('');
 
 				// Sorts country web page list in order of most to least popular 
@@ -108,7 +110,8 @@
 					'<li><a href = "JamaicaGuide.html">Jamaica</a></li>',
 					'<li><a href = "PeruGuide.html">Peru</a></li>',
 					'<li><a href = "NewZealandGuide.html">New Zealand</a></li>',
-					'<li><a href = "SriLankaGuide.html">Sri Lanka</a></li>'
+					'<li><a href = "SriLankaGuide.html">Sri Lanka</a></li>',
+					'<li><a href = "TurkeyGuide.html">Turkey</a></li>'
 				].join('');
 				var element = document.getElementById("sorting");
 				var val = element.options[element.selectedIndex].value;
@@ -178,6 +181,7 @@
 		<li><a href = "ThailandGuide.html">Thailand</a></li>
 		<li><a href = "TurkeyGuide.html">Turkey</a></li>
 		<li><a href = "TurkeyGuide.html"></a>Turkey</li>
+		<li><a href = "TurkeyGuide.html">Turkey</a></li>
 	</ul>
 
 	<!-- Navigation bar that holds the sort button, home and about buttons, and search bar -->
